--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(LABS_100)
 set(CMAKE_CXX_STANDARD 11)
 
 add_executable(LABS_100
-        LAB01/jhernandez613.cpp LAB02/jhernandez613_1.cpp LAB03/jhernandez613_2.cpp)
+        LAB01/jhernandez613.cpp LAB02/jhernandez613_1.cpp LAB03/jhernandez613_2.cpp LAB04_1/jhernandez613_3.cpp LAB04_2/jhernandez613_4.cpp)
